<resources>
    <string name="app_name">SummerSchoolHomework</string>
    <string name="project_info_description">Сделать приложение, в котором люди, желающие приобрести домашнее животное, могут просматривать объявления заводчиков, отмечать понравившихся в раздел \"Любимые\" и связываться с продавцами в чате.</string>
    <string name="student_info_name">Беспалова Виктория</string>
    <string name="student_info_form">11 класс</string>
    <string name="student_info_github">https://github.com/victobes</string>
    <string name="header_skills">Навыки</string>
    <string name="skill_info_kotlin">Kotlin</string>
    <string name="skill_info_java">Java</string>
    <string name="skill_info_python">Python</string>
    <string name="skill_info_pascal">Pascal</string>
    <string name="student_github_button">Github</string>
    <string name="filter_string">Фильтр</string>
    <string name="less_one_year_string"><![CDATA[< 1 года]]></string>
    <string name="two_years_string">2 года</string>
    <string name="three_years_string">3 года</string>
    <string name="apply_string">Применить</string>
    <string name="about_me_string">О себе</string>
</resources>